# xfw

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/xfw/: Cargo.toml
crates/xfw-cli/: Cargo.toml
crates/xfw-cli/src/: lib.rs
crates/xfw-layout/: Cargo.toml
crates/xfw-layout/src/: converter.rs  layout_tree.rs  lib.rs  render_object_tree.rs
crates/xfw-layout/tests/: style_tree_tests.rs
crates/xfw-model/: Cargo.toml
crates/xfw-model/src/: lib.rs
crates/xfw-platform/: Cargo.toml
crates/xfw-platform/src/: buffer.rs  clipboard.rs  connection.rs  error.rs  event.rs  event_loop.rs  inotify.rs  input.rs  lib.rs  platform.rs  surface.rs  wayland.rs  xdg.rs
crates/xfw-platform/tests/: buffer_tests.rs  clipboard_tests.rs  event_loop_tests.rs  headless_tests.rs  inotify_tests.rs  input_tests.rs  platform_tests.rs  surface_tests.rs  wayland_tests.rs  xdg_tests.rs
crates/xfw-render/: Cargo.toml
crates/xfw-render/src/: lib.rs
crates/xfw-render/tests/: renderer_tests.rs
crates/xfw-runtime/: Cargo.toml
crates/xfw-runtime/src/: lib.rs  lua.rs  state.rs  tree.rs
crates/xfw-runtime/tests/: lua_state_tests.rs  state_registry_tests.rs
crates/xfw/src/: main.rs
docs/: architecture.md  configuration.md  lua_dsl.md  roadmap.md  xfw-platform.md
docs/examples/: hardware_widgets.lua
lua/framework/: bootstrap.lua  runtime.lua  state.lua  style.lua  ui.lua
lua/widgets/: status_bar.lua
