[workspace]
members = [
    "crates/xfw",
    "crates/xfw-cli",
    "crates/xfw-layout", "crates/xfw-model",
    "crates/xfw-platform",
    "crates/xfw-render",
    "crates/xfw-runtime",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
cosmic-text = "0.18"
mlua = { version = "0.11", default-features = false, features = ["macros", "serialize", "error-send"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.31", features = ["client"] }
inotify = "0.11"
taffy = "0.9"
thiserror = "2.0"
tiny-skia = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
