[package]
name = "xfw-platform"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
smithay-client-toolkit.workspace = true
tracing.workspace = true
mio = { workspace = true, features = ["os-ext", "os-poll"] }
wayland-client.workspace = true
wayland-protocols.workspace = true

[features]
default = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"