[package]
name = "xfw-platform"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
smithay-client-toolkit.workspace = true
thiserror.workspace = true
tracing.workspace = true
memmap2 = "0.9"
mio.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-wlr = "0.3"

[features]
default = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"