[package]
name = "xfw-platform"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
tracing.workspace = true
smithay-client-toolkit.workspace = true
mio = { version = "1.0", features = ["os-poll", "net", "os-ext"] }
parking_lot.workspace = true
libc = "0.2"
once_cell = "1.19"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.10"
